--- a/Scikit-learn.ipynb
+++ b/Scikit-learn.ipynb
@@ -19,33 +19,26 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mRunning cells with 'usr (Python 3.11.2)' requires the ipykernel package.\n",
+      "\u001b[1;31mRunning cells with 'my_conda_env (Python 3.10.16)' requires the ipykernel package.\n",
       "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/bin/python -m pip install ipykernel -U --force-reinstall'"
+      "\u001b[1;31mCommand: 'conda install -n my_conda_env ipykernel --update-deps --force-reinstall'"
      ]
     }
    ],
    "source": [
     "from sklearn.datasets import load_boston"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "usr",
+   "display_name": "my_conda_env",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.11.2"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
